--- a/Notebooks/W2-Tokenizer.ipynb
+++ b/Notebooks/W2-Tokenizer.ipynb
@@ -246,7 +246,7 @@
     "tags": []
    },
    "source": [
-    "<img src=pipeline.PNG align='left'> <br> <br> <br> <br> <br> Let us build this pipeline by importing the `Tokenizer` class. "
+    "<img src=images/pipeline.PNG align='left'> <br> <br> <br> <br> <br> Let us build this pipeline by importing the `Tokenizer` class. "
    ]
   },
   {
