--- a/Notebooks/W2-Tokenizer.ipynb
+++ b/Notebooks/W2-Tokenizer.ipynb
@@ -246,7 +246,7 @@
     "tags": []
    },
    "source": [
-    "<img src=https://github.com/Arunprakash-A/Modern-NLP-with-Hugging-Face/blob/main/Notebooks/images/pipeline.png align='left'> <br> <br> <br> <br> <br> Let us build this pipeline by importing the `Tokenizer` class. "
+    "<img src="https://github.com/Arunprakash-A/Modern-NLP-with-Hugging-Face/blob/main/Notebooks/images/pipeline.png?raw=true" align='left'> <br> <br> <br> <br> <br> Let us build this pipeline by importing the `Tokenizer` class. "
    ]
   },
   {
