Save pretrained tokenizer

--- a/Notebooks/Tokenizer.ipynb
+++ b/Notebooks/Tokenizer.ipynb
@@ -2793,9 +2793,23 @@
     "pprint(model_inputs,compact=True)"
    ]
   },
-  {
+{
    "cell_type": "markdown",
    "id": "bebd957d",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "We can save the pre-trained tokenizer by calling `pt_tokenizer.save('hopper')`.It will create a directory named `hopper` and store all the required files ( `tokenizer.json`, `tokenizer_config.json`, `special_tokens_map.json`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bebd958d",
    "metadata": {
     "editable": true,
     "slideshow": {
